--- a/DataManage/AddData.xaml
+++ b/DataManage/AddData.xaml
@@ -66,7 +66,7 @@
 
                 </Grid.Resources>
                 <TextBlock Grid.Row="0" Grid.Column="0" Text="相 :" Margin="-20,5,0,0" VerticalAlignment="Top"/>
-                <ComboBox Name="inputPhase" Width="70"  Style="{StaticResource selectComboBox}" ></ComboBox>
+                <ComboBox Name="inputPhase" Width="70" SelectionChanged="inputPhase_SelectionChanged"  Style="{StaticResource selectComboBox}" ></ComboBox>
 
                 <TextBlock Grid.Row="1" Grid.Column="0" Text="相比例（%）:" Margin="-20,5,0,0"/>
                 <TextBox Grid.Row="1" Grid.Column="1"   Name="Phase_ratio" />
@@ -75,7 +75,8 @@
                 <TextBox Grid.Row="2" Grid.Column="1"   Name="Temperature" />
 
                 <TextBlock Grid.Row="3" Grid.Column="0" Text="衍射面 :" Margin="-20,5,0,0"/>
-                <TextBox Grid.Row="3" Grid.Column="1"   Name="Diff_plane" />
+                <ComboBox Grid.Row="3" Grid.Column="1" Name="inputDiff_plane" Width="70" Style="{StaticResource selectComboBox}" />
+                
 
                 <TextBlock Grid.Row="4" Grid.Column="0" Text="衍射弹性常数Ehkl（GPa）:" Margin="-20,5,0,0"/>
                 <TextBox Grid.Row="4" Grid.Column="1"   Name="Ehkl" />
