--- a/DataManage/MainWindow.xaml
+++ b/DataManage/MainWindow.xaml
@@ -3,6 +3,7 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:gif="http://wpfanimatedgif.codeplex.com"
         xmlns:local="clr-namespace:DataManage"
         mc:Ignorable="d"
         Title="数据管理平台"  Loaded="Window_Loaded" 
@@ -219,7 +220,7 @@
                                 </DataGrid.Columns>
 
                             </DataGrid>
-
+                            <Label Name="loading_text" Content="数据加载中..." FontSize="50" Margin="280,124,280,124" Grid.Row="2"/>
                         </Grid>
                     </TabItem>
 
