数据加载问题

--- a/DataManage/MainWindow.xaml
+++ b/DataManage/MainWindow.xaml
@@ -138,7 +138,7 @@
                             <DataGrid Name="dg1" AlternationCount="2" AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" 
                               Margin="20,10,20,10" HorizontalAlignment="Center" Height="300"
                               Grid.Row="2" Grid.Column="1" IsReadOnly="True" SelectionUnit="FullRow"
-                                      EnableRowVirtualization="False" Cursor="Hand">
+                                      EnableRowVirtualization="False" Cursor="Hand" ScrollViewer.ScrollChanged="DataGrid_ScrollChanged">
 
                                 <DataGrid.RowStyle>
                                     <Style TargetType="DataGridRow">
